--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,7 @@
 [build]
-  command = "npm run build"
+  base = "client"
   publish = "dist"
+  command = "npm run build"
 
 [dev]
   command = "npm run dev"
